--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,10 @@
     -webkit-transition: all ease 0.4s;
     -moz-transition: all ease 0.4s;
     -ms-transition: all ease 0.4s;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+    /*box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
     -ms-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);*/
 }
 
 .page-content {
@@ -36,6 +36,7 @@
     position: relative;
 
     overflow-y: scroll;
+    overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
 }
 
@@ -50,6 +51,7 @@ header.fixed-header~.page-content {
     display: inline-block;
     clear: both;
     width: 100%;
+    overflow: hidden;
 }
 
 h1,
@@ -59,7 +61,7 @@ h4,
 h5,
 h6 {
     /*color: #000000; Jacek*/
-    color: #10069F;
+    color: #0254B7;
 }
 
 .theme-dark h1,
@@ -707,6 +709,8 @@ header a {
     background-image: -webkit-linear-gradient(63deg, rgb(255, 132, 0) 0%, rgb(255, 176, 62) 100%);
     background-image: -ms-linear-gradient(63deg, rgb(255, 132, 0) 0%, rgb(255, 176, 62) 100%);
     color: #ffffff;
+    /*margin-bottom: 2rem;*/
+    line-height: 3rem !important;
 }
 
 .ios .color-theme-gray .btn.gradient,
@@ -814,8 +818,7 @@ header a {
 .color-theme-blue .block-title,
 .color-theme-blue .tabber-bottom .nav-tabs .nav-link.active {
     /*color: #1283f6 !important; Jacek*/
-    color: #F8622F;
-     !important;
+    color: #F8622F !important;
 }
 
 .color-theme-pink .background {
@@ -1592,21 +1595,27 @@ a:hover {
 /* card  */
 
 .card {
-    margin-bottom: 15px
+    margin-bottom: 15px;
+    background-color: white;
+    border: 0;
 }
 
 .md .card {
-    box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.15);
-    -webkit-box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.15);
-    -ms-box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.15);
+    /* box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.05);
+    -ms-box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.05);
     border: 0;
-    border-radius: 10px;
+    border-radius: .25rem;*/
 }
 
 .md.card-footer,
 .md .card-header {
-    border-radius: 10px 10px 0 0;
+    /*border-radius: .25rem .25rem;
+    text-align: left;
+    background-color: white;
+    border-bottom: solid 1px #007bff !important;
+    padding: 0;*/
 }
 
 .md .card .card-body {
@@ -1910,6 +1919,8 @@ a:hover {
 .md .input-group {
     border: 0;
     border-radius: 0;
+    /*border: 1px solid #0254B7;
+    border-radius: .25rem;*/
 }
 
 .md .input-group-append,
@@ -1920,7 +1931,7 @@ a:hover {
     border: 0;
     /*color: #888888; Jacek*/
     background-color: rgba(0, 123, 255, 0.1);
-    color: #10069F;
+    color: #0254B7;
 }
 
 .verification {
@@ -2132,14 +2143,15 @@ body .wrapper .page .footer {
 }
 
 .md .searchshadow {
-    border-radius: 7px !important;
+    border-radius: .25rem !important;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.15);
-    -webkit-box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.15);
-    -ms-box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.05);
+    -ms-box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.05);
     width: 100%;
     overflow: hidden;
+    border: 1px solid #007bff;
 }
 
 .md .searchshadow .form-control {
@@ -2901,8 +2913,8 @@ body .wrapper .page .footer {
 /* Scrolbar webkit css */
 
 ::-webkit-scrollbar {
-    width: 2px;
-    height: 2px;
+    width: 0;
+    height: 0;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -3058,7 +3070,11 @@ body .wrapper .page .footer {
 
     .tabber.publish-tabs a.publish-tabs-link {
         height: 100px;
-        line-height: 60px;
+        /*line-height: 60px;*/
         min-width: 100px;
+    }
+
+    .headpage {
+        font-size: 1rem;
     }
 }
